--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -1,7 +1,7 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
+  padding: 10px;
+  margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -11,7 +11,7 @@ body {
 }
 
 main {
-  padding: 5rem 0;
+  padding: 15rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
