--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -1,7 +1,8 @@
 html,
 body {
-  padding: 10px;
-  margin: 10px;
+  padding: 20px;
+  padding-top: 50px;
+  margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
