--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -37,3 +37,9 @@ font-color: blue !important;
   justify-content: center;
   align-items: center;
 }
+#chart_container {
+    padding: 10px;
+    border: 2px solid gray;
+    box-shadow: -1px 2px 5px grey,  1px -2px 3px;
+    border-radius: 10px;
+}
