--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -33,6 +33,7 @@ padding: 10px;
     box-shadow: -1px 2px 5px grey,  1px -2px 3px;
     border-radius: 10px;
 }
+
 .container {
   height: 100vh;
   display: flex;
@@ -40,4 +41,10 @@ padding: 10px;
   justify-content: center;
   align-items: center;
 }
-    
+
+.card {
+padding: 10px;
+    border: 2px solid gray;
+    box-shadow: -1px 2px 5px grey,  1px -2px 3px;
+    border-radius: 10px;
+}    
