--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -48,3 +48,17 @@ padding: 10px;
     box-shadow: -1px 2px 5px grey,  1px -2px 3px;
     border-radius: 10px;
 }    
+
+@media only screen and (max-width: 1164px)
+.card {
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.card {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
