--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -49,11 +49,11 @@ padding: 10px;
     border-radius: 10px;
 }    
 
-@media only screen and (max-width: 1164px)
+/* @media only screen and (max-width: 1164px)
 .card {
     flex-wrap: wrap;
     justify-content: space-around;
-}
+} */
 .card {
     display: flex;
     justify-content: space-between;
