--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -42,14 +42,14 @@ padding: 10px;
   align-items: center;
 }
 
-.card {
+/*.card {
 padding: 10px;
     border: 2px solid gray;
     box-shadow: -1px 2px 5px grey,  1px -2px 3px;
     border-radius: 10px;
 }    
 
-/* @media only screen and (max-width: 1164px)
+ @media only screen and (max-width: 1164px)
 .card {
     flex-wrap: wrap;
     justify-content: space-around;
