--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -36,25 +36,21 @@ padding: 10px;
 
 .container {
   height: 100vh;
-/*   display: flex; */
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-/*.card {
-padding: 10px;
-    border: 2px solid gray;
-    box-shadow: -1px 2px 5px grey,  1px -2px 3px;
-    border-radius: 10px;
-}    
 
  @media only screen and (max-width: 1164px)
 .card {
     flex-wrap: wrap;
     justify-content: space-around;
-} */
-.card {
+    padding: 10px;
+    border: 2px solid gray;
+    box-shadow: -1px 2px 5px grey,  1px -2px 3px;
+    border-radius: 10px;
     display: flex;
     justify-content: space-between;
     margin-top: 4rem;
