--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -48,8 +48,8 @@ padding: 10px;
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 10px;
-    border: 2px solid gray;
-    box-shadow: -1px 2px 5px grey,  1px -2px 3px;
+    border: 2px solid #fafafa;
+    box-shadow: -1px 2px 5px #fafafa,  1px -2px 3px;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
