--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -65,8 +65,8 @@ padding: 10px;
 }
 
 .sky {
- color: -webkit-link;
+ color: rgb(105, 163, 178);
 }
 .chart-paragraph {
-  color: #adfe25;
+  color: rgb(128, 0, 128);
 }
