--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -60,9 +60,8 @@ padding: 10px;
 }
 
 .chart-title {
-  color: #aaaf25;
-  
-}
+  color: rgb(128, 0, 128);
+ }
 
 .sky {
  color: rgb(105, 163, 178);
