--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -43,13 +43,13 @@ padding: 10px;
 }
 
 
- @media only screen and (max-width: 1164px)
+/*  @media only screen and (max-width: 1164px) */
 .card {
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 10px;
-    border: 2px solid #fafafa;
-    box-shadow: -1px 2px 5px #fafafa,  1px -2px 3px;
+    border: 2px solid #fefefe;
+    box-shadow: -1px 2px 5px #fefefe,  1px -2px 3px;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
