--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -63,7 +63,7 @@ padding: 10px;
     border-radius: 10px;
     padding: 15px;
     width: 20rem;
-    margin-bottom: 2rem
+    margin-bottom: 2rem;
     color: -webkit-link;
     cursor: pointer;
     text-decoration: none;
