--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -43,7 +43,7 @@ padding: 10px;
 }
 
 
-/*  @media only screen and (max-width: 1164px) */
+ @media only screen and (max-width: 1164px)
 .card {
     flex-wrap: wrap;
     justify-content: space-around;
