--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -47,6 +47,8 @@ padding: 10px;
 .card {
     flex-wrap: wrap;
     justify-content: space-around;
+}
+.card {
     padding: 10px;
     border: 2px solid #fefefe;
     box-shadow: -1px 2px 5px #fefefe,  1px -2px 3px;
