--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -112,3 +112,23 @@ padding: 10px;
 .chart-paragraph {
   color: rgb(128, 0, 128);
 }
+@media only screen and (max-width: 700px)
+.about-container p {
+    padding-right: 1rem;
+}
+.about-container p {
+    padding-right: 9rem;
+    line-height: 25px;
+}
+p {
+    font-size: 14px;
+    color: blue;
+}
+user agent stylesheet
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
