--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -116,19 +116,19 @@ padding: 10px;
 .about-container p {
     padding-right: 1rem;
 }
-.about-container p {
+/* .about-container p {
     padding-right: 9rem;
     line-height: 25px;
-}
+} */
 p {
     font-size: 14px;
     color: blue;
 }
-user agent stylesheet
+/* user agent stylesheet
 p {
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-}
+} */
