--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -32,10 +32,11 @@ code {
 }
 
 #mainbody {
-padding: 10px;
+    padding: 10px;
     border: 2px solid gray;
     box-shadow: -1px 2px 5px grey,  1px -2px 3px;
     border-radius: 10px;
+    margin-top: 200px;
 }
 
 .container {
