--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -95,7 +95,7 @@ code {
     padding: 10px;
     width: 20rem;
     margin-bottom: 2rem;
-    color: rgb(95, 103, 200);
+    color: rgb(100, 103, 200);
     cursor: pointer;
     text-decoration: none;
     margin-top: 4rem;
@@ -113,10 +113,10 @@ code {
 .chart-paragraph {
   color: rgb(128, 0, 128);
 }
-@media only screen and (max-width: 700px)
+/* @media only screen and (max-width: 700px)
 .about-container p {
     padding-right: 1rem;
-}
+} */
 /* .about-container p {
     padding-right: 9rem;
     line-height: 25px;
