--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -11,14 +11,14 @@ body {
   box-sizing: border-box;
 }
 
-/* main {
+main {
   padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-} */
+}
 
 div {
     display: block;
