--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -45,6 +45,8 @@ code {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 300px;
+  padding-top: 100px;
 }
 
 @media only screen and (max-width: 700px)
