--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -49,7 +49,7 @@ code {
   padding-top: 150px;
 }
 
-@media only screen and (max-width: 700px)
+/* @media only screen and (max-width: 700px)
 .about-container {
     width: 100%;
 }
@@ -58,7 +58,7 @@ code {
 .about-container {
     order: 2;
 }
-
+ */
  @media only screen and (max-width: 1164px)
 .card {
     flex-wrap: wrap;
