--- a/BBsTeams/styles/globals.css
+++ b/BBsTeams/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 20px;
   padding-top: 200px;
+  margin-top: 200px;
   margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
